--- a/projeto-cortel/index.html
+++ b/projeto-cortel/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Morderno</title>
 
+    <link rel="shortcut icon" href="imagens/background001.jpg">
+
     <link rel="stylesheet" href="estilo/style.css">
 
 </head>
@@ -100,7 +102,7 @@
     </section>
 
     <footer>
-<p>Site criado por <a href="https://github.com/Renanrobes" target="_blank">Renan de Jesus Robes </a>para  o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank"> CursoemVideo</a></p>
+<p>Site criado por <a href="https://github.com/Renanrobes" target="_blank">Renan de Jesus Robes </a>para  o <a href="https://www.youtube.com/channel/UCgetBhvOkobzEcX1KPUkj6w" target="_blank"> RnanJR</a></p>
     </footer>
 </body>
 </html>
