--- a/projeto-cortel/index.html
+++ b/projeto-cortel/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Morderno</title>
 
-    <link rel="shortcut icon" href="imagens/background001.jpg">
+    <link rel="shortcut icon" href="imagens/renanana.png">
 
     <link rel="stylesheet" href="estilo/style.css">
 
