--- a/ex023/tabela01.html
+++ b/ex023/tabela01.html
@@ -12,21 +12,22 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
-
-        tr.linha{
-            background-color: rgb(0, 161, 161);
-        }
-
+    
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /* Alinhamento horizontal */
+            vertical-align: middle;/* Alinhmendo vertical*/
         }
 
-        td.dado {
-              background-color: chartreuse;
+        .numero {
+            text-align: right;
         }
+
+
     </style>
 </head>
 <body>
@@ -40,23 +41,23 @@
     -->
     <table>
          <tr> <!-- Primeira linha -->
-             <td class="dado">A1</td>
+             <td>A1</td>
              <td>B1</td>
              <td>C1</td>
          </tr>
-         <tr class="linha"> <!-- Segunda linha-->
+         <tr> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C3</td>
+            <td class="numero">C2</td>
          </tr>
-         <tr> <!-- Terceira linha-->
+         <tr> <!-- Terceira linha -->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
          </tr>
-         <tr><!-- Quarta linha-->
+         <tr><!-- Quarta linha -->
             <td>A4</td>
-            <td class="dado">B4</td>
+            <td>B4</td>
             <td>C4</td>
          </tr>
     </table>
